21:08 14/07/20 fix overlap text bug in sidebar

--- a/src/components/Content/JokeLogic/Joke/Joke.css
+++ b/src/components/Content/JokeLogic/Joke/Joke.css
@@ -81,7 +81,6 @@
     padding-bottom: 10px;
     font-size: 18px;
     line-height: 26px;
-    overflow-wrap: break-word;
 }
 
 /*Last update and Category*/
