--- a/src/components/Sidebar/FavJoke/FavJoke.css
+++ b/src/components/Sidebar/FavJoke/FavJoke.css
@@ -89,7 +89,6 @@
     padding-bottom: 10px;
     font-size: 14px;
     line-height: 20px;
-    overflow-wrap: break-word;
 }
 
 /*Last update and Category*/
